k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 3
  selector:  #managed by Kustomize
  template:
    spec:
      containers:
      - name: helloworld
        image: ghcr.io/mehix/rw-k-task:main
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
